added blink animation to joystick + changed site meta description

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Sebastian Montagna Portfolio"
-      content="Retro gamer style portfolio, looking for my first Frontend Job"
+      name="description"
+      content="Sebastian Montagna's retro gamer style portfolio, looking for my first Frontend Job"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
